<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <!-- key area 1 -->
    <TextView
        android:text="@string/environmental_key_area_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_1_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- key area 2 -->
    <TextView
        android:text="@string/environmental_key_area_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_2_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea2_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_2_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_2_title_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea2_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_2_title_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea2_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_2_title_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea2_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_2_title_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea2_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- key area 3 -->
    <TextView
        android:text="@string/environmental_key_area_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_3_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_3_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- key area 4 -->
    <TextView
        android:text="@string/environmental_key_area_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_4_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea4_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_4_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- key area 5 -->
    <TextView
        android:text="@string/environmental_key_area_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_5_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea5_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/environmental_key_area_5_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lvKeyArea5_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>