<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Kena pakai scrollview just in case user phone kecik, so boleh scroll down bila x muat-->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Letak view dalam ni -->
        <com.seladanghijau.i_sras.custom.CustomTextView
            app:font="arial.ttf"
            android:text="@string/workplace"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- bahagian legend -->
        <include layout="@layout/layout_legend" />

        <!-- bahagian soalan -->
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <!-- key area 1 -->
            <TextView
                android:text="@string/workplace_key_area_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_1_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_1_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_1_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- key area 2 -->
            <TextView
                android:text="@string/workplace_key_area_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_2_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- key area 3 -->
            <TextView
                android:text="@string/workplace_key_area_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_3_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- key area 4 -->
            <TextView
                android:text="@string/workplace_key_area_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_4_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_4_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea4_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_4_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea4_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_4_title_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea4_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- key area 4 -->
            <TextView
                android:text="@string/workplace_key_area_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_5_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea5_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_5_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_5_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea5_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- key area 4 -->
            <TextView
                android:text="@string/workplace_key_area_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_6_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea6_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/workplace_key_area_6_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lvKeyArea6_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPreviousW"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnNextW"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>